tests/baselines/reference/literalTypeNameAssertionNotTriggered.errors.txt
/a.ts(1,20): error TS2307: Cannot find module 'something' or its corresponding type declarations.
/b.ts(3,6): error TS2345: Argument of type '""' is not assignable to parameter of type '"x"'.


==== /b.ts (1 errors) ====
    import a = require('./a');
    declare function f<T>(obj: T, key: keyof T): void;
    f(a, "");
         ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type '"x"'.
    
==== /a.ts (1 errors) ====
    import x = require("something");
                       ~~~~~~~~~~~
!!! error TS2307: Cannot find module 'something' or its corresponding type declarations.
    export { x };
    